--- a/RA_figs.rmd
+++ b/RA_figs.rmd
@@ -177,7 +177,6 @@ results$yvar <- "growth_inv"
 results$xvar <- "total_weight_0"
 results$data <- "SummaryInd"
 results$model <- "log10(yvar)~log10(xvar)"
-saved_results <- as.data.frame(results)
 results[1:6]
 
 for(spp in names(data)) {
@@ -208,8 +207,8 @@ results$yvar <- "growth_inv"
 results$xvar <- "leaf_area_0"
 results$data <- "SummaryInd"
 results$model <- "log10(yvar)~log10(xvar)"
-saved_results <- bind_rows(saved_results,results)
-results
+saved_results <- as.data.frame(results)
+results[1:6]
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
@@ -261,7 +260,13 @@ results$r.squared <- round(results$r.squared,digits=3)
 results$p.value <- round(results$p.value,digits=3)
 results$a <- round(results$a,digits=2)
 results$b <- round(results$b,digits=2)
-results
+results$yvar <- "total_inv"
+results$xvar <- "leaf_area_0"
+results$data <- "SummaryInd"
+results$model <- "log10(yvar)~log10(xvar)"
+saved_results <- bind_cols(saved_results[1:2],results[2])
+names(saved_results) <- c("species","r1","r2")
+results[1:6]
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
@@ -273,6 +278,95 @@ mtext("Initial leaf area", 1, outer=TRUE,cex=1.2)
 legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 ```
 
+
+```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
+par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
+yvar <- "leaf_area"
+xvar <- "leaf_area_0"
+
+data <- subset(SummaryInd)
+data <- split(data, data$species)
+lmfits <- lapply(data, function(x) lm(log10(x[[yvar]]) ~  (log10(x[[xvar]]))))
+results <- summarise_all_fits(lmfits)
+
+results$r.squared <- round(results$r.squared,digits=3)
+results$p.value <- round(results$p.value,digits=3)
+results$a <- round(results$a,digits=2)
+results$b <- round(results$b,digits=2)
+results$yvar <- "total_inv"
+results$xvar <- "leaf_area_0"
+results$data <- "SummaryInd"
+results$model <- "log10(yvar)~log10(xvar)"
+saved_results <- bind_cols(saved_results[1:2],results[2])
+names(saved_results) <- c("species","r1","r2")
+results[1:6]
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
+                    main=spp,col=col.age(data[[spp]]$age))
+}
+
+mtext("Leaf area at time 1", 2, outer=TRUE,cex=1.2)
+mtext("Leaf area at time 0", 1, outer=TRUE,cex=1.2)
+legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
+```
+
+
+```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=6, fig.height=6}
+# pdf("figs2/R2-improve.pdf", height=5, width=5)
+# plot
+par(mfcol=c(1,1), cex=1, omi=c(.2,.2,.01,.01), mai=c(.8,.8,.04,0.2)) 
+plot(r1~r2,saved_results,col=col.spp(species),pch=16,cex=1.1,cex.axis=0.8,cex.lab=0.8,ylab="R2 for veg invest vs leaf area",xlab="R2 for total invest vs leaf area",xlim=c(0,1),ylim=c(0,1))
+abline(0,1)
+text(r1~r2,saved_results, labels=species, pos=c("4","3","4","3","2","2","2","2","3","2","2","2","2","3"), offset=.4, cex=0.7,col="black")
+saved_results$max_RA <- c("0.6","0.9","0.2","0.7","0.9","0.4","0.3","0.4","0.85","0.4","0.4","0.4","0.5","0.3")
+text(r1~r2,saved_results, labels=max_RA, pos=c("1","1","1","1","1","1","4","1","1","1","3","3","1","1"), offset=.4, cex=0.7,col="black")
+# dev.off()
+```
+
+```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
+pdf("figs2/shoot_leaf_area_VS_repro_inv.pdf", height=11.69, width=8.27)
+plot
+par(mfrow=c(4,4), cex=1, omi=c(.6,.5,.1,.1), mai=c(.35,.4,.25,0.1)) 
+#par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2))
+yvar <- "shoot_leaf_area"
+xvar <- "repro_inv"
+
+data <- subset(SummaryInd,repro_inv>0)
+data <- split(data, data$species)
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.1,cex.axis=0.8,cex.main=0.9,
+                    main=spp,col=col.age(data[[spp]]$age))
+}
+
+mtext("Shoot leaf area", 2, outer=TRUE,cex=1.2,line=1.2)
+mtext("Reproductive investment (mg)", 1, outer=TRUE,cex=1.2,line=1.2)
+legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
+dev.off()
+```
+
+```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
+pdf("figs2/leaf_area_increase_VS_repro_inv.pdf", height=11.69, width=8.27)
+plot
+par(mfrow=c(4,4), cex=1, omi=c(.6,.5,.1,.1), mai=c(.35,.4,.25,0.1)) 
+#par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
+yvar <- "growth_leaf_area_log"
+xvar <- "repro_inv"
+
+data <- subset(SummaryInd,repro_inv>0)
+data <- split(data, data$species)
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="x",xlab="",ylab="",cex=1.1,cex.axis=0.8,cex.main=0.9,
+                    main=spp,col=col.age(data[[spp]]$age))
+}
+
+mtext("Leaf area increase (log-log)", 2, outer=TRUE,cex=1.2,line=1.2)
+mtext("Reproductive investment (mg)", 1, outer=TRUE,cex=1.2,line=1.2)
+legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
+dev.off()
+```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=15, fig.height=15}
 par(mfcol=c(3,3), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,1,.4,0.2)) 
