--- a/tests.Rmd
+++ b/tests.Rmd
@@ -1,7 +1,7 @@
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
 par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
 yvar <- "shoot_leaf_area"
-xvar <- "leaf_area"
+xvar <- "initial_leaf_area"
 
 data <- subset(SummaryInd)
 data <- split(data, data$species)
@@ -24,22 +24,27 @@ mtext("Leaf area", 1, outer=TRUE,cex=1.2)
 legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 ```
 
-```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
-par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(1.1,.7,.6,0.2)) 
-yvar <- "growth_height_log"
-xvar <- "RA"
-xvar2 <- "growth_inv"
 
-data <- subset(SummaryInd,reproducing==TRUE&age>2)
+SummaryInd$growth_height_per <- SummaryInd$growth_height/SummaryInd$height_0
+SummaryInd$growth_leaf_per <- SummaryInd$growth_leaf/SummaryInd$leaf_weight
+SummaryInd$growth_leaf_pos <- SummaryInd$growth_leaf
+
+
+
+```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=20, fig.height=20}
+par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.3,.7,.6,0.2)) 
+yvar <- "growth_leaf_per"
+xvar2 <- "diameter"
+
+data <- subset(SummaryInd)
 data <- split(data, data$species)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="",xlab="repro",ylab="",cex=1.3, main=spp,col=col.age(data[[spp]]$age))
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar2,log="x",xlab="veg", ylab="", cex=1.3, main=spp,col=col.age(data[[spp]]$age))
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar2,log="xy",xlab="", ylab="", cex=1.3, main=spp,col=col.age(data[[spp]]$age))
 }
 
-mtext("Height growth (log-log)", 2, outer=TRUE,cex=1.2)
-mtext("Reproductive investment", 1, outer=TRUE,cex=1.2)
+mtext("Height growth (%)", 2, outer=TRUE,cex=1.2)
+mtext("diameter", 1, outer=TRUE,cex=1.2)
 legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 ```
 
@@ -95,4 +100,33 @@ for(spp in names(data)) {
 mtext("Height growth (log-log)", 2, outer=TRUE,cex=1.2)
 mtext("Reproductive investment", 1, outer=TRUE,cex=1.2)
 legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
+```
+
+
+
+```{r}
+par(mfrow=c(2,2), cex=1, omi=c(.7,.7,.1,.1), mai=c(.3,.3,.6,0.2)) 
+data <- subset(SummaryInd)
+data <- split(data, data$species)
+
+for(spp in names(data)) {
+plot(leaf_weight~diameter,data[[spp]],log="xy",cex=1.3, main=spp,col=col.age(data[[spp]]$age),pch=16)
+points(leaf_weight_0~diameter_0,data[[spp]],cex=1.3,pch=1,col=col.age(data[[spp]]$age))
+arrows(data[[spp]]$diameter, data[[spp]]$leaf_weight, data[[spp]]$diameter_0,data[[spp]]$leaf_weight_0, length = 0,angle = 30, code = 2, col = col.age(data[[spp]]$age),lwd=.3)
+}
+```
+
+```{r}
+par(mfrow=c(2,2), cex=1, omi=c(.7,.7,.1,.1), mai=c(.3,.3,.6,0.2)) 
+data <- subset(SummaryInd)
+data <- split(data, data$species)
+
+for(spp in names(data)) {
+plot(stem_weight~diameter,data[[spp]],log="xy",cex=1.3, main=spp,col=col.age(data[[spp]]$age),pch=16)
+points(stem_weight_0~diameter_0,data[[spp]],cex=1.3,pch=1,col=col.age(data[[spp]]$age))
+arrows(data[[spp]]$diameter, data[[spp]]$stem_weight, data[[spp]]$diameter_0,data[[spp]]$stem_weight_0, length = 0,angle = 30, code = 2, col = col.age(data[[spp]]$age),lwd=.3)
+points(leaf_weight~diameter,data[[spp]],cex=1.3,pch=17,col=col.age(data[[spp]]$age))
+points(leaf_weight_0~diameter_0,data[[spp]],cex=1.3,pch=2,col=col.age(data[[spp]]$age))
+arrows(data[[spp]]$diameter, data[[spp]]$leaf_weight, data[[spp]]$diameter_0,data[[spp]]$leaf_weight_0, length = 0,angle = 30, code = 1, col = col.age(data[[spp]]$age),lwd=.3,lty=3)
+}
 ```
