--- a/RA_combined_plots.Rmd
+++ b/RA_combined_plots.Rmd
@@ -10,7 +10,9 @@ source("R/figures.R")
 
 #modified; original below
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=18, fig.height=15}
-par(mfcol=c(4,3), cex=1, omi=c(.1,.3,.3,.1), mai=c(1.1,1,.1,0.1)) 
+pdf("figs2/RA_schedule_plots", height=11.3, width=8)
+plot
+par(mfcol=c(4,2), cex=1, omi=c(.1,.2,.3,.1), mai=c(.6,.6,.1,0.1)) 
 yvar <- "leaf_area"
 yvar2 <- "height"
 yvar3 <- "total_inv"
@@ -40,6 +42,7 @@ for(spp in names(data)) {
                     col=col.age(data[[spp]]$age))
   points(height~age,data2[[spp]],pch=16)
   }
+dev.off()
 ```
                         
 
