--- a/tests.Rmd
+++ b/tests.Rmd
@@ -130,3 +130,21 @@ points(leaf_weight_0~diameter_0,data[[spp]],cex=1.3,pch=2,col=col.age(data[[spp]
 arrows(data[[spp]]$diameter, data[[spp]]$leaf_weight, data[[spp]]$diameter_0,data[[spp]]$leaf_weight_0, length = 0,angle = 30, code = 1, col = col.age(data[[spp]]$age),lwd=.3,lty=3)
 }
 ```
+
+```{r}
+par(mfrow=c(2,2), cex=1, omi=c(.7,.7,.1,.1), mai=c(.3,.3,.6,0.2)) 
+data <- subset(SummaryInd)
+data <- split(data, data$species)
+
+for(spp in names(data)) {
+plot(stem_weight~diameter,data[[spp]],log="xy",cex=1.3, main=spp,col=col.age(data[[spp]]$age),pch=16)
+points(stem_weight_0~diameter_0,data[[spp]],cex=1.3,pch=1,col=col.age(data[[spp]]$age))
+arrows(data[[spp]]$diameter, data[[spp]]$stem_weight, data[[spp]]$diameter_0,data[[spp]]$stem_weight_0, length = 0,angle = 30, code = 2, col = col.age(data[[spp]]$age),lwd=.3)
+points(leaf_weight~diameter,data[[spp]],cex=1.3,pch=17,col=col.age(data[[spp]]$age))
+points(leaf_weight_0~diameter_0,data[[spp]],cex=1.3,pch=2,col=col.age(data[[spp]]$age))
+arrows(data[[spp]]$diameter, data[[spp]]$leaf_weight, data[[spp]]$diameter_0,data[[spp]]$leaf_weight_0, length = 0,angle = 30, code = 1, col = col.age(data[[spp]]$age),lwd=.3,lty=3)
+}+
+```
+
+
+
