--- a/RA_combined_plots.Rmd
+++ b/RA_combined_plots.Rmd
@@ -8,11 +8,14 @@ SummarySppAge <- readRDS("export/SummarySppAge.rds")
 source("R/figures.R")
 ```
 
-#modified; original below
+###Current best plots  
+* the plot of investment by leaf area, indicates that allocation to reproduction, leads to less vegetative investment than predicted  
+* plotting by age, shows that leaf investment and height growth are curtailed as plants age  
+* I think there still needs to be more of a link to connect this decreased "growth" with age directly to reproduction - maybe a "new" version of the plot showing individuals with more reproduction have less growth?
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=18, fig.height=15}
-pdf("figs2/RA_schedule_plots", height=11.3, width=8)
+pdf("figs2/RA_schedule_plots_2.pdf", height=11.3, width=8)
 plot
-par(mfcol=c(4,2), cex=1, omi=c(.1,.2,.3,.1), mai=c(.6,.6,.1,0.1)) 
+par(mfcol=c(4,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1,1,.1,0.1)) 
 yvar <- "leaf_area"
 yvar2 <- "height"
 yvar3 <- "total_inv"
@@ -29,16 +32,16 @@ data2 <- split(data2, data2$species)
 
 for(spp in names(data)) {
   
-  plot_yvar_vs_xvar(data[[spp]], yvar3, xvar,log="xy",xlab="leaf area (midyear)",ylab="total investment (mg)",cex=1.3,
+  plot_yvar_vs_xvar(data[[spp]], yvar3, xvar,log="xy",xlab="leaf area (midyear)",ylab="total investment (mg)",cex=1.1,
                     col=col.age(data[[spp]]$age),main=spp)
   arrows(data[[spp]]$leaf_area_midyear,data[[spp]]$growth_inv,data[[spp]]$leaf_area_midyear,data[[spp]]$total_inv,length = 0, angle = 30, code = 2, col = "black",lwd=1)
-  plot_yvar_vs_xvar(data[[spp]], yvar4, xvar2,log="x",xlab="age",ylab="RA",cex=1.3,ylim=c(0,1.4),
+  plot_yvar_vs_xvar(data[[spp]], yvar4, xvar2,log="x",xlab="age",ylab="RA",cex=1.1,ylim=c(0,1.4),
                     col=col.age(data[[spp]]$age))
   points(RA_leaf_area~age,data2[[spp]],pch=16)
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar2,log="xy",xlab="age",ylab="final leaf area",cex=1.3,
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar2,log="xy",xlab="age",ylab="final leaf area",cex=1.1,
                     col=col.age(data[[spp]]$age))
   points(leaf_area~age,data2[[spp]],pch=16)
-  plot_yvar_vs_xvar(data[[spp]], yvar2, xvar2,log="xy",xlab="age",ylab="height",cex=1.3,
+  plot_yvar_vs_xvar(data[[spp]], yvar2, xvar2,log="xy",xlab="age",ylab="height",cex=1.1,
                     col=col.age(data[[spp]]$age))
   points(height~age,data2[[spp]],pch=16)
   }
@@ -46,7 +49,7 @@ dev.off()
 ```
                         
 
-
+###Trends by age
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=18, fig.height=15}
 par(mfcol=c(2,2), cex=1, omi=c(.1,.3,.3,.1), mai=c(1.1,1,.1,0.1)) 
 xvar <- "age"
@@ -65,15 +68,17 @@ for(spp in names(data)) {
   
   plot_yvar_vs_xvar(data[[spp]], yvar1, xvar,log="xy",ylab="height",xlab="age",cex=1.3,
                     col=col.age(data[[spp]]$age),main=spp)
-  plot_yvar_vs_xvar(data[[spp]], yvar2, xvar,log="xy",ylab="diameter",xlab="",cex=1.3,
+  plot_yvar_vs_xvar(data[[spp]], yvar2, xvar,log="xy",ylab="diameter",xlab="age",cex=1.3,
                     col=col.age(data[[spp]]$age))
-  plot_yvar_vs_xvar(data[[spp]], yvar3, xvar,log="xy",ylab="leaf area",xlab="",cex=1.3,
+  plot_yvar_vs_xvar(data[[spp]], yvar3, xvar,log="xy",ylab="leaf area",xlab="age",cex=1.3,
                     col=col.age(data[[spp]]$age))
-  plot_yvar_vs_xvar(data[[spp]], yvar4, xvar,log="xy",ylab="weight",xlab="",cex=1.3,
+  plot_yvar_vs_xvar(data[[spp]], yvar4, xvar,log="xy",ylab="weight",xlab="age",cex=1.3,
                     col=col.age(data[[spp]]$age))
   }
 ```
 
+
+###Figures from lab meeting on Sept 3, 2015
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=18, fig.height=15}
 par(mfcol=c(4,3), cex=1, omi=c(.8,.3,.3,.1), mai=c(.5,1,.1,0.1)) 
 SummaryInd$repro_inv_log <- SummaryInd$repro_inv + 10
@@ -104,54 +109,6 @@ for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar3, xvar3,log="y",xlab="",ylab="",cex=1.3,col=col.age(data[[spp]]$age))
   plot_yvar_vs_xvar(data[[spp]], yvar4, xvar3,log="",xlab="prop maxH",ylab="",cex=1.3,col=col.age(data[[spp]]$age))
   mtext("Reproductive investment (mg)                                                                            initial plant weight                                                                                    prop maxH", 1, line=1,outer=TRUE,cex=1.2)
-  mtext(spp, 3, outer=TRUE,cex=1.2)   
-}
-```
-
-
-```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=18, fig.height=15}
-par(mfcol=c(4,3), cex=1, omi=c(.8,.3,.3,.1), mai=c(.5,1,.1,0.1)) 
-yvar <- "growth_inv"
-yvar2 <- "repro_inv"
-yvar3 <- "total_inv"
-yvar4 <- "RA"
-xvar <- "leaf_area_0"
-xvar2 <- "total_weight_0"
-xvar3 <- "prop_maxH"
-
-data <- subset(SummaryInd)
-data <- split(data, data$species)
-
-for(spp in names(data)) {
-  
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="veg investment",cex=1.3,
-                    col=col.age(data[[spp]]$age))
-  legend("bottomright",legend=labels.age(),col=col.age(),pch=16, cex=1,bty="n")
-  plot_yvar_vs_xvar(data[[spp]], yvar2, xvar,log="xy",xlab="",ylab="repro investment",cex=1.3,
-                    col=col.age(data[[spp]]$age))
-  plot_yvar_vs_xvar(data[[spp]], yvar3, xvar,log="xy",xlab="",ylab="total investment (mg)",cex=1.3,
-                    col=col.age(data[[spp]]$age))
-  arrows(data[[spp]]$leaf_area_0,data[[spp]]$growth_inv,data[[spp]]$leaf_area_0,data[[spp]]$total_inv,length = 0, angle = 30, code = 2, col = "black",lwd=1)
-  plot_yvar_vs_xvar(data[[spp]], yvar4, xvar,log="x",xlab="initial leaf area",ylab="RA",cex=1.3,
-                    col=col.age(data[[spp]]$age))
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar2,log="xy",xlab=spp,ylab="",cex=1.3,
-                    col=col.age(data[[spp]]$age))
-  plot_yvar_vs_xvar(data[[spp]], yvar2, xvar2,log="xy",xlab="",ylab="",cex=1.3,
-                    col=col.age(data[[spp]]$age))
-  plot_yvar_vs_xvar(data[[spp]], yvar3, xvar2,log="xy",xlab="",ylab="",cex=1.3,
-                    col=col.age(data[[spp]]$age))
-  arrows(data[[spp]]$total_weight_0,data[[spp]]$growth_inv,data[[spp]]$total_weight_0,data[[spp]]$total_inv,length = 0, angle = 30, code = 2, col = "black",lwd=1)
-  plot_yvar_vs_xvar(data[[spp]], yvar4, xvar2,log="x",xlab="initial plant weight",ylab="",cex=1.3,
-                    col=col.age(data[[spp]]$age))
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar3,log="y",xlab="",ylab="",cex=1.3,
-                    col=col.age(data[[spp]]$age))
-  plot_yvar_vs_xvar(data[[spp]], yvar2, xvar3,log="y",xlab="",ylab="",cex=1.3,
-                    col=col.age(data[[spp]]$age))
-  plot_yvar_vs_xvar(data[[spp]], yvar3, xvar3,log="y",xlab="",ylab="",cex=1.3,
-                   col=col.age(data[[spp]]$age))
-  plot_yvar_vs_xvar(data[[spp]], yvar4, xvar3,log="",xlab="prop maxH",ylab="",cex=1.3,
-                    col=col.age(data[[spp]]$age))
-  mtext("Initial leaf area                                                                            initial plant weight                                                                                    prop maxH", 1, line=1,outer=TRUE,cex=1.2)
   mtext(spp, 3, outer=TRUE,cex=1.2)   
 }
 ```
